--- a/WebTour/src/main/resources/static/css/detailTour.css
+++ b/WebTour/src/main/resources/static/css/detailTour.css
@@ -382,31 +382,61 @@ body {
 	background-color: #7cb342;
 }
 
-.review-container {
-	background-color: white;
-	border-radius: 8px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	padding: 20px;
-	width: 400px;
-	text-align: center;
-}
-
-.review-container h2 {
-	font-size: 18px;
-	margin-bottom: 10px;
-}
-
-.review-container h3 {
-	font-size: 16px;
-	margin-bottom: 20px;
-	font-weight: normal;
-}
-
-.stars {
-	color: #ffcc00;
-	margin-bottom: 20px;
-}
-
+		.review {
+            border-bottom: 1px solid #ddd;
+            padding: 10px 0;
+        }
+        .review-header {
+            display: flex;
+            align-items: center;
+            margin-bottom: 2px;
+        }
+        .review-header .name {
+            font-weight: bold;
+            margin-right: 10px;
+        }
+        .review-header .date {
+            color: #999;
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+        }
+        .review-header .date i {
+            margin-right: 5px;
+        }
+        .review-header .tags {
+            margin-left: auto;
+            display: flex;
+            gap: 10px;
+        }
+        .review-header .tags .tag {
+            background-color: #f5f5f5;
+            border: 1px solid #ddd;
+            border-radius: 3px;
+            padding: 5px 10px;
+            font-size: 14px;
+            color: #666;
+        }
+        .review-body {
+            font-size: 16px;
+		    flex-grow: 1; /* Để phần nội dung chiếm tối đa không gian */
+		    margin-right: 10px; /* Tạo khoảng cách giữa nội dung và nút */
+        }
+        .stars-review {
+            color: #f5a623;
+            margin-bottom: 10px;
+        }
+        .review-body-container {
+		    display: flex; /* Đặt flexbox để căn chỉnh nội dung */
+		    justify-content: space-between; /* Đẩy hai phần tử ra hai đầu */
+		    align-items: center; /* Căn giữa theo chiều dọc */
+		}
+		.list-review {
+		    display: flex;
+		    flex-direction: column;
+		    gap: 15px; /* Khoảng cách giữa các review */
+		}
+		
 .review-container input, .review-container textarea {
 	width: calc(100% - 20px);
 	padding: 10px;
