--- a/WebTour/src/main/resources/templates/User/vouchers.html
+++ b/WebTour/src/main/resources/templates/User/vouchers.html
@@ -4,77 +4,107 @@
 <title>Vouchers</title>
 <link rel="stylesheet" href="../css/pagination.css">
 <link rel="stylesheet" href="../css/vouchers.css">
+<link rel="stylesheet" href="/css/profile.css">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 	<header id="header"></header>
 
-	<div class="content">
-		<h3>Danh sách các mã khuyến mãi của bạn.</h3>
-		<table class="table">
-			<thead>
-				<tr>
-					<th class="large-column">Mã khuyến mãi</th>
-					<th class="small-column">Chi tiết</th>
-					<th class="mid-column">Phần trăm</th>
-					<th class="large-column">Bắt đầu</th>
-					<th class="large-column">Kết thúc</th>
-				</tr>
-			</thead>
+	<div class="container">
+		<div class="left">
+			<h2>TRANG TÀI KHOẢN</h2>
+			<p>
+				<strong>Xin chào, <span th:text="${user.fullName}">Đỗ
+						Nam</span>!
+				</strong>
+			</p>
+			<p>
+				<a th:href="@{/account(userId=${user.user_id})}">Thông tin tài
+					khoản</a>
+			</p>
+			<p>
+				<a th:href="@{/account/get-order(userId=${user.user_id})}">Đơn
+					hàng của bạn</a>
+			</p>
+			<p>
+				<a href="\account\change-password">Đổi mật khẩu</a>
+			</p>
+			<p>
+				<a th:href="@{/account/get-vouchers(userId=${user.user_id})}">Mã
+					giảm giá của bạn</a>
+			</p>
+		</div>
+		<div class="right">
+			<h3>Kho mã giám giá của bạn.</h3>
+			<div class="coupon-wr">
 
-			<tbody id="promotion-table-body">
-				<tr th:each="voucher : ${vouchers}"
-					th:attr="data-id=${voucher.promotionId}">
-					<td th:text="${voucher.code}"></td>
-					<td th:text="${voucher.description}" class="text-left"></td>
-					<td th:text="${voucher.discount + '%'}">
-					<td th:text="${voucher.startDate}"></td>
-					<td th:text="${voucher.endDate}"></td>
-				</tr>
-		</table>
+				<div th:each="voucher : ${vouchers}" class="coupon">
+					<div class="left">
+						<img src="/imagess/background_light_v1.jpg" alt="ND Travel Logo">
+						<span th:text="${voucher.code}"></span>
+					</div>
+					<div class="right">
+						<div class="new">Mới</div>
+						<div th:text="${voucher.description}" class="details"></div>
+						<div class="conditions">
+							Có hiệu lực từ: <span th:text="${voucher.startDate}"></span> - <span
+								th:text="${voucher.endDate}"></span>
+						</div>
+						<div class="button">Dùng Sau</div>
+					</div>
+				</div>
+
+			</div>
+
+
+			<div class="pagination-container">
+				<ul class="pagination" id="pagination">
+					<!-- Prev Icon -->
+					<li th:if="${currentPage > 0}"><a
+						th:href="@{/account/get-vouchers(userId=${user.user_id}, page=${currentPage - 1}, size=5)}">
+							<i class="fas fa-chevron-left icon"></i>
+					</a></li>
+
+					<!-- First Page -->
+					<li><a
+						th:href="@{/account/get-vouchers(userId=${user.user_id}, page=0, size=5)}"
+						th:class="${currentPage == 0} ? 'active' : ''">1</a></li>
+
+					<!-- Dots before current range -->
+					<li th:if="${currentPage > 2}"><span>...</span></li>
+
+					<!-- Middle Pages -->
+					<li
+						th:each="i : ${#numbers.sequence(currentPage - 1, currentPage + 1)}"
+						th:if="${i > 0 and i < totalPages - 1}"><a
+						th:href="@{/account/get-vouchers(userId=${user.user_id}, page=${i}, size=5)}"
+						th:class="${currentPage == i} ? 'active' : ''" th:text="${i + 1}">
+					</a></li>
+
+					<!-- Dots after current range -->
+					<li th:if="${currentPage < totalPages - 3}"><span>...</span></li>
+
+					<!-- Last Page -->
+					<li th:if="${totalPages > 1}"><a
+						th:href="@{/account/get-vouchers(userId=${user.user_id}, page=${totalPages - 1}, size=5)}"
+						th:class="${currentPage == totalPages - 1} ? 'active' : ''"
+						th:text="${totalPages}"> </a></li>
+
+					<!-- Next Icon -->
+					<li th:if="${currentPage + 1 < totalPages}"><a
+						th:href="@{/account/get-vouchers(userId=${user.user_id}, page=${currentPage + 1}, size=5)}">
+							<i class="fas fa-chevron-right icon"></i>
+					</a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
-	<div class="pagination-container">
-		<ul class="pagination" id="pagination">
-			<!-- Prev Icon -->
-			<li th:if="${currentPage > 0}"><a
-				th:href="@{/account/get-vouchers(userId=${user.user_id}, page=${currentPage - 1}, size=5)}">
-					<i class="fas fa-chevron-left icon"></i>
-			</a></li>
 
-			<!-- First Page -->
-			<li><a
-				th:href="@{/account/get-vouchers(userId=${user.user_id}, page=0, size=5)}"
-				th:class="${currentPage == 0} ? 'active' : ''">1</a></li>
-
-			<!-- Dots before current range -->
-			<li th:if="${currentPage > 2}"><span>...</span></li>
-
-			<!-- Middle Pages -->
-			<li
-				th:each="i : ${#numbers.sequence(currentPage - 1, currentPage + 1)}"
-				th:if="${i > 0 and i < totalPages - 1}"><a
-				th:href="@{/account/get-vouchers(userId=${user.user_id}, page=${i}, size=5)}"
-				th:class="${currentPage == i} ? 'active' : ''" th:text="${i + 1}">
-			</a></li>
-
-			<!-- Dots after current range -->
-			<li th:if="${currentPage < totalPages - 3}"><span>...</span></li>
-
-			<!-- Last Page -->
-			<li th:if="${totalPages > 1}"><a
-				th:href="@{/account/get-vouchers(userId=${user.user_id}, page=${totalPages - 1}, size=5)}"
-				th:class="${currentPage == totalPages - 1} ? 'active' : ''"
-				th:text="${totalPages}"> </a></li>
-
-			<!-- Next Icon -->
-			<li th:if="${currentPage + 1 < totalPages}"><a
-				th:href="@{/account/get-vouchers(userId=${user.user_id}, page=${currentPage + 1}, size=5)}">
-					<i class="fas fa-chevron-right icon"></i>
-			</a></li>
-		</ul>
-	</div>
+	<div id="footer"></div>
 
 	<script src="/js/header.js"></script>
-
-
 </body>
 </html>
