--- a/WebTour/src/main/resources/templates/Admin/customer_management.html
+++ b/WebTour/src/main/resources/templates/Admin/customer_management.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="/css/home_admin.css">
 <link rel="stylesheet" href="/css/base.css">
 <link rel="stylesheet" href="/css/pagination.css">
+<link rel="stylesheet" href="/css/user_management.css">
 <link
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 	rel="stylesheet" />
@@ -21,9 +22,9 @@
 	<div class="main-content">
 		<div class="header"></div>
 		<div class="table-container">
-			<h2 class="mb-20">Customer</h2>
+			<h2 class="mb-20">Khách hàng</h2>
 			<div class="filter">
-
+				<span>Sắp xếp điểm người dùng theo: </span>
 				<button id="filter-customer-desc">Tăng</button>
 				<button id="filter-customer-asc">Giảm</button>
 			</div>
@@ -31,10 +32,10 @@
 				<thead>
 					<tr>
 						<th>#</th>
-						<th>Full name</th>
-						<th>Phone</th>
+						<th>Họ và tên</th>
+						<th>Số điện thoại</th>
 						<th>Email</th>
-						<th>Gender</th>
+						<th>Giới tính</th>
 					</tr>
 				</thead>
 				<tbody id="user-table">
