--- a/WebTour/src/main/resources/static/css/home_user.css
+++ b/WebTour/src/main/resources/static/css/home_user.css
@@ -1120,4 +1120,4 @@ body {
 	color: transparent; /* Làm cho sao có nửa vàng và nửa xám */
 	-webkit-background-clip: text;
 	background-clip: text;
-	
+}
