--- a/WebTour/src/main/resources/templates/components/sidebarAdmin.html
+++ b/WebTour/src/main/resources/templates/components/sidebarAdmin.html
@@ -80,7 +80,7 @@
 			class="fas fa-edit"> </i> Customer
 	</a></li>
 	<li><a th:href="@{/admin/promotion-management}"> <i
-			class="fas fa-edit"> </i> Promotion
+			class="fas fa-tags"> </i> Promotion
 	</a></li>
 	<li><a th:href="@{/admin/tours-management}"> <i
 			class="fas fa-plane"> </i> Tours
